--- a/_posts/2020-06-26-usacofaq.md
+++ b/_posts/2020-06-26-usacofaq.md
@@ -75,7 +75,8 @@ I might sometimes answer questions on the USACO server, but I do tend to be rath
 ### Is it possible to go from X division to Y division in Z amount of time?
 
 I don't know, only you can answer this question. It depends on the amount of hours you put in, how effective your practice time is, and other factors that I probably don't know about you.
-What topics do I need to know for each of the USACO divisions?
+
+### What topics do I need to know for each of the USACO divisions?
 
 Copied and pasted from a previous post.
 
